fixed arrov svg visibility

--- a/css/main.css
+++ b/css/main.css
@@ -1064,7 +1064,7 @@ input[type=checkbox] {
   height: 16px;
   position: absolute;
   left: 25px;
-  background-image: url(../../assets/images/arrow.svg);
+  background-image: url(../../assets/images/arrow.png);
   background-repeat: no-repeat;
 }
 
