--- a/styles/_sells.scss
+++ b/styles/_sells.scss
@@ -110,7 +110,7 @@
       height: 16px;
       position: absolute;
       left: 25px;
-      background-image: url(../../assets/images/arrow.svg);
+      background-image: url(../../assets/images/arrow.png);
       background-repeat: no-repeat;
     }
 
